--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
         <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
     </script>
     <script id="template-tag-link" type="text/x-handlebars-template">
-        <li><a href="#{{ tag }}"><span>{{ tag }}</span></a></li>
+        <li><a href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
     </script>
     <script id="template-author-link" type="text/x-handlebars-template">
         by <a href="#author-{{authorHref}}">{{author}}</a>
     </script>
     <script id="template-tag-cloud-link" type="text/x-handlebars-template">
         {{#each tags}}
-        <li><a href="#tag-{{tag}}" class="{{className}}">{{tag}}({{count}})</a> </li>
+        <li><a href="#tag-{{ tag }}" class="{{className}}">{{tag}}({{count}})</a> </li>
         {{/each}}
     </script>
     <script id="template-author-cloud-link" type="text/x-handlebars-template">
